--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ body {
 .modal-box {
   background-color: rgb(255, 255, 255);
   width: 528px;
-  height: 581px;
+  height: 611px;
   display: flex;
   justify-content: flex-end;
   position: absolute;
@@ -213,18 +213,19 @@ body {
 
 .modal-box-form {
   display: flex;
+  flex-direction: column;
   position: absolute;
   justify-content: center;
   left: 40px;
   right: 40px;
   top: 75px;
 }
-
 .data-form {
   width: 100%;
 }
 
 .data-label {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-top: 12px;
@@ -235,16 +236,82 @@ body {
   margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  padding-left: 40px;
 }
 
 .data-textarea {
   resize: none;
+  height: 120px;
   padding: 12px 16px 12px 16px;
   color: rgba(117, 117, 117, 0.5);
   font-weight: 400;
   font-size: 12px;
   letter-spacing: 0.01em;
   line-height: 1.16;
+}
+
+.data-input-icon {
+  position: absolute;
+  top: 36px;
+  left: 15px;
+}
+
+.data-checkbox-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.checkbox-appear-none {
+  appearance: none;
+  cursor: pointer;
+}
+
+.data-checkbox-label {
+  display: flex;
+  align-items: center;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(117, 117, 117, 1);
+}
+
+.data-checkbox-label::before {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 15px;
+  margin-right: 5px;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' fill='none'%3E%3Cpath fill='%23212121' d='M14.222 1.667v11.666H1.778V1.667h12.444Zm0-1.667H1.778C.8 0 0 .75 0 1.667v11.666C0 14.25.8 15 1.778 15h12.444C15.2 15 16 14.25 16 13.333V1.667C16 .75 15.2 0 14.222 0Z'/%3E%3C/svg%3E");
+}
+
+.data-checkbox-input:checked + .data-checkbox-label::before {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='15' fill='none'%3E%3Crect width='16' height='15' fill='%232196F3' rx='2'/%3E%3Cpath fill='%23fff' stroke='%23fff' stroke-width='.2' d='m3.957 7.752-.069-.066-.069.065-.888.842-.076.072.076.073 3.496 3.334.069.066.069-.066 7.504-7.158.076-.073-.076-.072-.882-.841-.069-.066-.069.066-6.553 6.246-2.539-2.422Z'/%3E%3C/svg%3E");
+  background-position: center;
+  border: none;
+}
+
+.data-checkbox-link {
+  color: rgba(33, 150, 243, 1);
+}
+
+.data-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  border-width: 0;
+  border-radius: 4px;
+  background-color: rgba(33, 150, 243, 1);
+  color: rgba(255, 255, 255, 1);
+  padding: 10px 76px 10px 76px;
+  cursor: pointer;
+  margin: 0 auto;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .modal-form-title {
