--- a/css/styles.css
+++ b/css/styles.css
@@ -232,6 +232,12 @@ body {
   color: rgba(117, 117, 117, 1);
 }
 
+.data-hover:hover,
+.data-hover:focus {
+  fill: rgba(33, 150, 243, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .data-input {
   margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -241,15 +247,25 @@ body {
   padding-left: 40px;
 }
 
+.data-input:hover,
+.data-input:focus {
+  outline: none;
+  border-color: rgba(33, 150, 243, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .data-textarea {
   resize: none;
   height: 120px;
   padding: 12px 16px 12px 16px;
-  color: rgba(117, 117, 117, 0.5);
   font-weight: 400;
   font-size: 12px;
   letter-spacing: 0.01em;
   line-height: 1.16;
+}
+
+.data-textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .data-input-icon {
@@ -564,6 +580,61 @@ body {
 
 .footer-socialmedia-link:not(:last-child) {
   margin-right: 10px;
+}
+
+.footer-form-box {
+  display: flex;
+  margin: 72px 0 0 78px;
+}
+
+.footer-form-tittle {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 1);
+  margin: 0;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  margin-top: 20px;
+  padding: 15px 0 15px 16px;
+  background-color: rgba(47, 48, 58, 1);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  border-width: 1px;
+  border-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  outline: none;
+  color: rgba(255, 255, 255, 1);
+}
+
+.footer-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-button {
+  display: flex;
+  gap: 24px;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  padding: 10px 28px 10px 42px;
+  margin: 36px 0 0 12px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  background-color: rgba(33, 150, 243, 1);
+  color: rgba(255, 255, 255, 1);
+  fill: rgba(255, 255, 255, 1);
+  border-width: 0;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
 
 /* portfolio */
