--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   color: rgba(33, 33, 33, 1);
@@ -284,7 +290,6 @@ body {
 
 .checkbox-appear-none {
   appearance: none;
-  cursor: pointer;
 }
 
 .data-checkbox-label {
@@ -295,6 +300,7 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(117, 117, 117, 1);
+  cursor: pointer;
 }
 
 .data-checkbox-label::before {
@@ -487,6 +493,7 @@ body {
 
 .client-box {
   display: flex;
+  justify-content: space-between;
 }
 
 .client-tile {
@@ -507,10 +514,6 @@ body {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-tile:not(:last-child) {
-  margin-right: 30px;
-}
-
 .footer-design {
   background-color: rgba(47, 48, 58, 1);
   padding-bottom: 60px;
@@ -518,7 +521,8 @@ body {
 
 .footer-content {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 .address-list {
@@ -678,6 +682,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  justify-content: center;
   list-style: none;
   margin: 50px 0 0 0;
   padding: 0;
